ADD splash and launcher images and theme data

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "martin_cv",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#00033f",
+    "theme_color": "#00033f",
     "description": "A new Flutter project to detail my CV on web.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
