--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_native_splash: ^2.2.16
   flex_color_scheme: ^7.3.1
   flutter_launcher_icons: ^0.13.1
+  go_router: ^13.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_native_splash: ^2.2.16
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
