--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.2
+  flutter_widget_from_html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
