--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -25,7 +22,7 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: martipello/flutter-action@v2
         with:
           channel: stable # or: beta, master (or main)
       - run: flutter --version
