--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,12 +19,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Flutter action
+        uses: subosito/flutter-action@v2.16.0
+
       - name: Clone repository
         uses: actions/checkout@v4
       - name: Set up Flutter
-        uses: martipello/flutter-action@v2
+        uses: subosito/flutter-action@v2
         with:
           channel: stable # or: beta, master (or main)
       - run: flutter --version
       - run: flutter pub get
       - run: flutter build web
+
