fix workflow file - again again again

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,6 +41,7 @@ jobs:
       - run: flutter --version
       - run: flutter pub get
       - run: flutter build web
+      - run: pwd
 
   deploy:
     environment:
