--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,8 +62,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '/build/web/'
+          path: './build/web/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
